# blockpaint

./: Cargo.toml  LICENSE  README.md
src/: canvas.rs  debug.rs  event.rs  input.rs  main.rs  palette.rs  terminal.rs  util.rs  window.rs
src/canvas/: border.rs  input.rs  palette.rs  shapes.rs  tools.rs
src/canvas/tools/: bucket.rs
src/event/: color_picker.rs  input.rs  key_movement.rs  undo_redo.rs
src/palette/: colors.rs  events.rs
src/terminal/: event.rs  sys.rs
src/terminal/sys/: other.rs  redox.rs
