[package]
name = "blockpaint"
description = "Paint program for the terminal"
version = "0.2.1"
authors = ["wooster0 <wooster0@proton.me>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(not(target = "redox"))'.dependencies]
crossterm = "0.19.0"

[target.'cfg(target = "redox")'.dependencies]
termion = "1.5.6"

[dependencies]
bracket-geometry = "0.8.7"
